添加flink任务支持jar包本地运行